<resources>
    <string name="zno">ЗНО</string>
    <string name="check_zno_full">Зовнішнє незалежне оцінювання</string>
    <string name="check_zno_lite">Офіційний тест ЗНО</string>
    <string name="exp_zno">Пробне</string>
    <string name="main_activity_label">Підготовка до ЗНО</string>
    <string name="begin_testing_btn_text">Розпочати тестування</string>
    <string name="last_passed_tests">Останні пройдені тести</string>
    <string name="records">Рекорди</string>
    <string name="testing_activity_label">Тестування</string>
    <string name="choose_lesson_view_text">ОБЕРІТЬ ПРЕДМЕТ:</string>
    <string name="tests_one">тест</string>
    <string name="tests_two_four">тести</string>
    <string name="tests_over_five">тестів</string>
    <string name="choose_test_view_text">ОБЕРІТЬ ТЕСТ:</string>
    <string name="for_">за</string>
    <string name="year">рік</string>
    <string name="dialog_start_test_text">Розпочати тест з урахуванням часу?</string>
    <string name="dialog_unfinished_test_text">Є незавершений тест! Бажаєте його продовжити?</string>
    <string name="dialog_load_test_text">Тест відсутній, завантажити?</string>
    <string name="dialog_unanswered_questions_text">Ви відповіли не на всі запитання!</string>
    <string name="dialog_positive_text">Так</string>
    <string name="dialog_negative_text">Ні</string>
    <string name="dialog_continue_text">Продовжити</string>
    <string name="dialog_cancel_text">Відміна</string>
    <string name="action_questions_list">Список питань</string>
    <string name="action_finish_testing">Завершити тестування</string>
    <string name="action_share">Поділитися</string>
    <string name="rating_ball">РЕЙТИНГОВИЙ БАЛ</string>
    <string name="test_ball">ТЕСТОВИЙ БАЛ</string>
    <string name="test_passed_in">ТЕСТ ПРОЙДЕНО ЗА</string>
    <string name="sad">:-(</string>
    <string name="happy">:-)</string>
    <string name="share_template">Мій результат тестування з %1$s — %2$.1f балів.\nПройти цей тест:
        http://zno-ua.net/test/%3$s/%4$d?utm-source=android</string>
    <string name="parent_question_text_show">Натисніть для відображення тексту</string>
    <string name="statement_text_grid_item">П</string>
    <string name="empty_list">Немає результатів :-(</string>
    <string name="passed">Пройдено </string>
    <string name="min">хв</string>
    <string-array name="months">
        <item>січня</item>
        <item>лютого</item>
        <item>березня</item>
        <item>квітня</item>
        <item>травня</item>
        <item>червня</item>
        <item>липня</item>
        <item>серпня</item>
        <item>вересня</item>
        <item>жовтня</item>
        <item>листопада</item>
        <item>грудня</item>
    </string-array>
    <string name="updating_db">Оновлення тестів.</string>
    <string name="downloading_tests">Завантаження тестів.</string>
    <string name="db_updated">Оновлення тестів завершено.</string>
    <string name="progress_test_load">Завантаження тесту</string>
    <string name="progress_test_save">Збереження тесту</string>
    <string name="progress_test_load_images">Завантаження зображень</string>
    <string name="test_load_complete">Тест завантажено</string>
    <string name="error_no_connection">Відсутнє з\'єднання з інтернетом</string>
    <string name="error_timeout">Неможливо завантажити тест \nСпробуйте пізніше </string>
    <string name="error_server_bad">Помилка серверу</string>
    <string name="error_unknown">Невідома помилка</string>
    <string name="error_cant_save_bitmap">Неможливо зберегти зображення</string>
    <string-array name="quotes">
        
        <item>Цитата з твору ЗНО-2014:&lt;br />Спочатку ти – людина, ти – особистість, а потім кістки і відро крові.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Коли людині потрібно добитись якоїсь цілі, в силу вступає сила тяжіння.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Вішати обман на голову</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Буратіно – це не людина, а шматок дерева.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Ті, хто мав владу, користувався нею не в той бік</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Є надія, що повага до малої людини ніколи не загине.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Невістка Кайдашихи була лагідна, чемна, за словом у кишеню не лізла.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Живучи з панами, Кайдашиха перейняла всю ту похоть</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Кожна людина може досягнути висот у навчанні, у спорті та в інших життєвих пунктах.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Відомі зірки, які народилися за допомогою своїх батьків або родичів</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Завдяки маленькій людині урожай вже не сохне</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />З малої Бджоли користі більше, за що Шершню мало б бути соромно.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Батьків треба поважати, бо вони тебе народили і дали по батькові.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Якщо будем зазнаватися, то вершина айсберга обламається.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Не можна оцінювати рибу по її здатності лазити по деревах</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Шевченка послали в табор</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Як голосить українське прислів’я</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Маленька людина більш заземлена</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Ми однакові за походженням, якого точно не знаємо</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Наше життя не може існувати без рівноваги та колообігу</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Маленька людина може набагато більше зробити, ніж пихатий буржуй</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Наведу приклад Гітлера (а що друзі екзаменатори, не очікували?)</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Були часи, коли Шевченко, Франко, Вишенський писали десь у хлівах, на дереві з ліхтариком</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Не можуть люди бути однаковими, тому у них є різні професії</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Всі ми раби божі, і усі ми смертники</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Отже, добре, що зараз немає євнухів, а є секс.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Магазин був зачинений, бо я не купив молока</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Декабристи – це люди, які знищували флору і фауну.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Треба зробити власну сім’ю, щоб вона підтримувала по кар’єрній драбині</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />У нього була ідея, але вона понесла крах.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Не сидять на заїждженому зайорзаному місці</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Є загальноприйняті правила поведінки, моральні цінності та духоінв якості, які роблять людину приємною</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Люди, залишайтеся людьми, свиней у нас і так вистачає.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Не потрібно цуратись недоліків, а проявляти їх з найкращої сторони.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Хтось нічого не досяг і на чуже не дивиться</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Щодня люди реалізують себе, виявляючи своє ставлення до оточуючих.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Навіть незначну особу мають більше, ніж ту, яка має більші статки</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />У кожного з нас є мрії, які мають можливість здійснюватись</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Дитина дарує увагу своїм пращурам: бабусі та дідусеві.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Великі люди – наша влада, але там все запущено.</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Людина – тварина досить дивна за своєю суттю</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Поспішиш – людей замордуєш</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Пишучи твір, я хотів зробити кінець достойним</item>
        <item>Цитата з твору ЗНО-2014:&lt;br />Спочатку нас спіткнула поразка</item>
        
        <item>Цитата з твору ЗНО-2011:&lt;br />Навіть у бактерій та грибків є свої проблеми та бажання їх вирішити. Саме тому ми й існуємо.</item>
        <item>Цитата з твору ЗНО-2011:&lt;br />Проблеми нам Господь створив, щоб нам не казалася земля пухом покушали не тільки пряник, ну і кнут.</item>
        <item>Цитата з твору ЗНО-2011:&lt;br />Найбільш розповсюджена проблема – це, звичайно, парламент України.</item>
        <item>Цитата з твору ЗНО-2011:&lt;br />Політики як стадо баранів і кожен хоче посісти місце вожака, отож і б’ються, як собаки у дворі. </item>
        <item>Цитата з твору ЗНО-2011:&lt;br />Людина, народившись на світ – це вже проблема для батьків. </item>
        <item>Цитата з твору ЗНО-2011:&lt;br />З часом людина почала будувати заводи, електростанції і сама почала отруювати оточуючу середу.</item>
        <item>Цитата з твору ЗНО-2011:&lt;br />Адже коли ми думаємо, ми змушуємо працювати всі розумні органи нашого тіла.</item>
        <item>Цитата з твору ЗНО-2011:&lt;br />Головна героїня пішла легким шляхом у вирішенні цієї проблеми – вчинила самогубство.</item>
        <item>Цитата з твору ЗНО-2011:&lt;br />Хочеться забути все, відкинути, забути, а ще краще кайфанути.</item>
        <item>Цитата з твору ЗНО-2011:&lt;br />У школі я пройшла наче 2-у світову війну.</item>
    </string-array>
    <string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="smart_banner_ad_unit_id">ca-app-pub-9629920327758375/6790595649</string>
    <string name="zno_db">База даних тестів ЗНО</string>
    <string name="testing">Тестування</string>
    <string name="testing_result">Результати тестування</string>
    <string name="official_test">Офіційний тест ЗНО</string>
    <string name="experimental_test">Пробне тестування ЗНО</string>
    <string name="session">сесія</string>
    <string name="variant">варіант</string>
    <string name="needed_to_download">необхідно завантажити</string>
    <string name="download_test">Завантажити тест?</string>
    <string name="download_test_description">Тест буде завантажено в пам`ять телефону.</string>
    <string name="restart_download_test_description">При завантаженні тесту виникла помилка, бажаєте спробувати знову?</string>
    <string name="delete_test_question">Видалити тест?</string>
    <string name="delete_test_description">Тест буде видалено з пам`яті телефону, після чого ви не зможете проходити його не завантаживши знову.</string>
    <string name="cancel">відмінити</string>
    <string name="download">завантажити</string>
    <string name="delete">видалити</string>
    <string name="start_test_question">Розпочати тестування?</string>
    <string-array name="start_test_choices">
        <item>з урахуванням часу</item>
        <item>без урахування часу</item>
    </string-array>
    <string name="start">розпочати</string>
    <string name="tasks">завдання</string>
    <string name="tasks_genitive">завдань</string>
    <string name="read_text">Прочитати текс</string>
    <string name="read_text_eng">read text</string>
    <string name="question">Запитання</string>
    <string name="question_eng">Question</string>
    <string name="close">закрити</string>
    <string name="close_eng">close</string>
    <string name="text_for_reading">Текст для читання</string>
    <string name="text_for_reading_eng">Text for reading</string>
    <string name="choose_point">Оберіть бал, на який розраховуєте:</string>
    <string name="chosen_point">Обраний бал — </string>
    <string name="time_one_left">Залишилась %1$d %2$s.</string>
</resources>