<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/QuestionText">

    <TextView
        android:id="@+id/lesson_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ResultLessonHeader" />

    <Space
        android:layout_height="@dimen/space_large"
        android:layout_width="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_ball"
                style="@style/ResultBallTimeHeader" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_small" />

            <TextView
                android:id="@+id/test_ball"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ResultBallTime" />

        </LinearLayout>

        <FrameLayout
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <View style="@style/ResultRowSeparator" />
        </FrameLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating_ball"
                style="@style/ResultBallTimeHeader" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_small" />

            <TextView
                android:id="@+id/rating_ball"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ResultBallTime" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/result_time_block_separator"
            android:visibility="visible"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <View style="@style/ResultRowSeparator" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/result_time_block"
            android:visibility="visible"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_passed_in"
                style="@style/ResultBallTimeHeader" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_small" />

            <TextView
                android:id="@+id/elapsed_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ResultBallTime" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>